0.1.1
  BugFix: anchor navigation fixes.
  BugFix: the name of some dependencies were not being shown correctly.
  BugFix: list of dependencies was not sorted.
  BugFix: outdated pkg list was not sorted.
  BugFix: When user closed searchbar inside a QTextBrowser, cursor position was reseted.
  Added search feature also in Information tab.

0.1.0 
  Initial Proof of Concept release.